rsfg/tests/scripts/error/not-span.sfg
fn main()
	if !"str"
		panic()

